maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:4: error: not found: value t1
    while (!(t1&&(!t2))) {
             ^WallFollowerMaze:4: error: not found: value t2
    while (!(t1&&(!t2))) {
                   ^