maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  
  def keepHandOnSideWall() {
    while (!(t1&&(!t2))) {
      droite()
      var t1=estDosMur
 		  var t2=estFaceMur
      if (estDosMur) {return}
    }
    
  }
  while (!estSurBiscuit) {
    keepHandOnSideWall()
    avance()
  }
  
  
  
}